--- a/gescoth/views/settings.xml
+++ b/gescoth/views/settings.xml
@@ -9,7 +9,7 @@
 			<field name="inherit_id" ref="base.res_config_settings_view_form" />
 			<field name="arch" type="xml">
 				<xpath expr="//div[hasclass('settings')]" position="inside">
-					<div class="app_settings_block" data-string="Gescoth" string="Gescoth" data-key="gescoth">
+					<div class="app_settings_block" data-string="gescoth" string="Gescoth" data-key="gescoth">
 						<h3>Gestion d'école secondaire</h3>
 						<div class="row mt16 o_settings_container">
 							<div class="o_settings_left_pane">
